# amvs-se

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Makefile  README.md  package.xml  requirements.txt
.github/workflows/: ci.yml
config/: .gitignore
config/evaluation/: base.yml  blur_3.yml  blur_5.yml  blur_7.yml  blur_9.yml  drop_chroma.yml  drop_chroma_both.yml  gaussian_3.yml  gaussian_5.yml  gaussian_7.yml  gaussian_9.yml  median_3.yml  median_5.yml  median_7.yml  median_9.yml  size_half.yml  size_quater.yml  skip_1.yml  skip_2.yml  skip_3.yml
config/evaluation_6/: equal.yml  individual.yml  ours.yml
config/sa_ta/: base.yml  median_3.yml  median_5.yml  median_7.yml  median_9.yml
docker/: Dockerfile.ffmpeg  Dockerfile.keras-gpu  Dockerfile.keras-gpu-py37
launch/: single_encoder.launch  single_encoder_validate.launch
script/: .gitignore  install.sh
script/cqp/: README.md  cqp_analytic_model_train.py  cqp_ml_model_train.py  cqp_regression.py
script/cqp/bitrate_model/: glm.py  model.py  plot.py  trainer.py  util.py
script/cqp/models/: nhevc-hd.h5  x264-cif.h5
script/cqp/preprocessor_model/: application.py  model.py
script/cqp/test/: test_bitrate_model.py  test_plot.py
script/evaluation/: evaluation_runner.py  plot_evaluation.py  plot_statistics.py
script/evaluation/test/: test_plot_evaluation.py
script/notebook/: bd_rate_preprocessor.ipynb  cqp_analytic_model.ipynb  cqp_driving_application.ipynb  cqp_lottermann.ipynb  cqp_ml_model.ipynb  cqp_preprocessor_model_application.ipynb  cqp_regression.ipynb  docker-compose.yml  frame_level_plots.ipynb  requirements.txt
script/util/: README.md  args.py  calculate-siti.sh  docker-compose.yml  fetch-y4m-hd-videos.sh  fetch-y4m-videos.sh  fetch-yuv-videos.sh  ffmpeg.py  image-to-video.sh  model.py  plot_siti.py  run_application_quality.py  run_ffmpeg.py  video-to-bag.sh  video-to-img.sh  video.py
script/util/test/: test_ffmpeg.py
source/: CMakeLists.txt
source/data/: CMakeLists.txt
source/data/include/: image_callback.h
source/data/src/: image_callback.cpp
source/decoder/: CMakeLists.txt
source/decoder/include/: av_decoder.h  video_decoder.h
source/decoder/src/: av_decoder.cpp  video_decoder.cpp
source/encoder/: CMakeLists.txt
source/encoder/include/: video_encoder.h  x264_encoder.h
source/encoder/src/: video_encoder.cpp  x264_encoder.cpp
source/filter/: CMakeLists.txt
source/filter/include/: base_image_filter_factory.h
source/filter/include/base/: base_image_filter.h
source/filter/include/blur/: blur_filter.h  gaussian_blur_filter.h  median_blur_filter.h  none_filter.h
source/filter/include/channel/: channel_filter.h
source/filter/include/parameter/: filter_parameter.h
source/filter/include/spatio_temporal/: spatial_filter.h  temporal_filter.h
source/filter/src/: base_image_filter.cpp  base_image_filter_factory.cpp  blur_filter.cpp  channel_filter.cpp  filter_parameter.cpp  gaussian_blur_filter.cpp  median_blur_filter.cpp  none_filter.cpp  spatial_filter.cpp  temporal_filter.cpp
source/include/: single_encoder.h
source/mux/: CMakeLists.txt
source/mux/include/: buffer_utils.h  super_frame_demux.h  super_frame_mux.h
source/mux/src/: super_frame_demux.cpp  super_frame_mux.cpp
source/quality/: CMakeLists.txt
source/quality/include/: mda.h  mdvqm.h  mdvqm_param.h  stvqm.h  stvqm_param.h  vqm_state.h
source/quality/src/: mda.cpp  mdvqm.cpp  stvqm.cpp  vqm_state.cpp
source/src/: single_encoder.cpp  single_encoder_node.cpp
source/statistics/: CMakeLists.txt
source/statistics/include/: encoder_statistics.h  frame_stats.h  statistics_collection.h
source/statistics/src/: encoder_statistics.cpp  statistics_collection.cpp
test/: CMakeLists.txt
test/filter/: channel_filter_test.cpp  filter_parameter_test.cpp  none_filter_test.cpp  spatial_filter_test.cpp  temporal_filter_test.cpp
test/include/: test_utils.h
test/mux/: buffer_utils_test.cpp  super_frame_demux_test.cpp  super_frame_mux_test.cpp
test/quality/: mda_test.cpp  mdvqm_test.cpp  stvqm_test.cpp  vqm_state_test.cpp
test/statistics/: encoder_statistics_test.cpp  statistics_collection_test.cpp
